2008-07-19  Markus Steinborn <msteinbo@uni-paderborn.de>

	* src/Makefile.am: The .ad and .dat files are put into /usr/share/gv
	(Patch from Orion Poplawski <orion@cora.nwra.com>)
	
	* configure.ac: Test for the presence of "mkstemp()"
	
	* src/file.c (file_getTmpFilename): Use mkstemp (if available) for
	getting the temporary filename
	
	* src/Ghostview.c, src/Ghostview.h, src/GhostviewP.h, 
	src/main.c, src/main_globals.h, src/resource.c: Add handling of 
	xinerama resource
	
	* src/main.c: Use Xinerama to get display resolution if the xinerama resource 
	is set to "On". If it is set to "Auto", let the heuristic from
	2008-07-12 decide. If it is set to "off", do not use Xinerama at all.
	
	* src/resource.c: More informative error message in case of too old
	~/.gv
	
	* src/Makefile.am src/gv-update-userconfig: New script for upating the
	user config.
	
	* doc/Makefile.am src/Makefile.am: Out of tree built
	Build GV outside of src directory (Patch by Bernhard R. Link)
	
	* configure.ac: Out of tree build

2008-07-16  Markus Steinborn <msteinbo@uni-paderborn.de>

	* src/info.c: Trigger info popup on "ERROR:" and "error:", too. 
	Needed for older gs.

2008-07-12  Markus Steinborn <msteinbo@uni-paderborn.de>

	* configure.ac, src/versionp.h: Bump version to 3.6.5.90.

	* src/main.c, src/paths.h: Heuristically use Xinerama to get display
	resolution iff the current display size looks like a single monitor
	(experimental)
	
	* src/gv_message.h: Improvement of "--scale" documentation which should
	have been included in 3.6.4.91, but it has not been.

2008-07-05  Markus Steinborn <msteinbo@uni-paderborn.de>

	* configure.ac, src/versionp.h: Bump version to 3.6.5.

2008-06-22  Markus Steinborn <msteinbo@uni-paderborn.de>

	* src/options_*.c, src/resource.c: Save GV.version resource to ~/.gv,
	if GV.version in ~/.gv is missing, assume it to be "gv 3.5.2".

2008-06-21  Markus Steinborn <msteinbo@uni-paderborn.de>

	* configure.ac, src/versionp.h: Bump version to 3.6.4.91.
