@@ -6,12 +6,12 @@
 
 # File distribution
 
-EXTRA_DIST= gv.1
+EXTRA_DIST= gv.1 gv-update-userconfig.1
 
 info_TEXINFOS = gv.texi
 gv_TEXINFOS = gpl.texi
 
-man_MANS = gv.1
+man_MANS = gv.1 gv-update-userconfig.1
 
 $(srcdir)/gv.1: $(top_srcdir)/src/versionp.h $(top_srcdir)/src/gv_message.h
 	help2man -n 'Postscript and PDF viewer' -o $(srcdir)/gv.1 ../src/gv
